--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -28,9 +28,9 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
-                <div class="error-container">
+                <!-- <div class="error-container">
                     <div class="gen_error">{{genError}}</div>
-                </div>
+                </div> -->
                 <div class="button-wrap">
                     <button class="bs-btn" id="btnSubmit" type="submit" [disabled]="!loginForm.valid">Login</button>
                 </div>
