--- a/src/app/components/view-transaction/view-transaction.component.html
+++ b/src/app/components/view-transaction/view-transaction.component.html
@@ -2,30 +2,35 @@
   <div class="page-title">
     <h2>Submitted Transactions</h2>
   </div>
-  <div class="mod-card" *ngFor="let item of transactionData; index as i">
-    <div class="mod-card-head">
-      <div class="card-title">
-        Reference No:
+  <ng-container *ngIf="transactionData.length != 0">
+    <div class="mod-card" *ngFor="let item of transactionData; index as i">
+      <div class="mod-card-head">
+        <div class="card-title">
+          Reference No:
+        </div>
+        <div class="card-title-content">
+          {{item.reference}}
+        </div>
       </div>
-      <div class="card-title-content">
-        {{item.reference}}
+      <div class="mod-card-content">
+        <div class="card-details">
+          <h2>Customer Name</h2>
+          <div class="card-detail-content">{{item.customer_name}}</div>
+        </div>
+        <div class="card-details">
+          <h2>Transfer Amount</h2>
+          <div class="card-detail-content">{{item['tansaction_details']['transfer_amount'] | currencyFormatter }}</div>
+        </div>
+        <div class="card-details">
+          <h2>Transfer Currency</h2>
+          <div class="card-detail-content">{{item['tansaction_details']['transfer_currency']}}</div>
+        </div>
       </div>
     </div>
-    <div class="mod-card-content">
-      <div class="card-details">
-        <h2>Customer Name</h2>
-        <div class="card-detail-content">{{item.customer_name}}</div>
-      </div>
-      <div class="card-details">
-        <h2>Transfer Amount</h2>
-        <div class="card-detail-content">{{item['tansaction_details']['transfer_amount'] | currency : item['tansaction_details']['transfer_currency'] : 'symbol-narrow'}}</div>
-      </div>
-      <div class="card-details">
-        <h2>Transfer Currency</h2>
-        <div class="card-detail-content">{{item['tansaction_details']['transfer_currency']}}</div>
-      </div>
-    </div>
-  </div>
+  </ng-container>
+  <ng-container *ngIf="transactionData.length == 0">
+    No Submitted transactions.
+  </ng-container>
   <ul class="nav-list">
       <li class="nav-item">
           <button class="bs-btn" id="back-btn" routerLink="/banktransfer">Back</button>
