--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 <div class="loader" *ngIf="globalservice.loader">
     <mat-spinner></mat-spinner>
 </div>
-<header class="header">
-    <ng-container *ngIf="globalservice.header">
-        <app-header></app-header>
-    </ng-container>
+<header class="header" *ngIf="globalservice.header">
+    <app-header></app-header>
 </header>
 <div class="container">
     <router-outlet></router-outlet>
