--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="lyt-login">
     <div class="form-container">
         <div class="page-title">
-            <h2>Login</h2>
+            <h2>LOGIN</h2>
         </div>
         <div class="login-wrap">
             <form class="login-form bs-form" [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()">
