--- a/src/assets/sass/elements/_elements.scss
+++ b/src/assets/sass/elements/_elements.scss
@@ -15,8 +15,9 @@ body {
   line-height: initial;
   font-family: $font !important;
   color: $clr-base;
+  background: #f9f9f9;
   font-size: 1.4rem;
-  // padding-bottom: 40px;
+  // padding-bottom: 40px; 
 }
 
 
