--- a/src/assets/sass/layout/_lyt-login.scss
+++ b/src/assets/sass/layout/_lyt-login.scss
@@ -4,17 +4,18 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background: $clr-white;
 
   .form-container {
-    // box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
+    // box-shadow: 0 0 40px rgba(0, 0, 0, 0.3); 
     position: absolute;
     top: 45%;
     left: 50%;
+    border: 1px solid #f1f1f1;
     max-width: 500px;
     width: 100%;
+    background-color: #fff; 
     transform: translate(-50%, -50%);
-    .page-title{
+    .page-title{     
       h2{
         text-align: center;
       }
